--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -51,3 +51,12 @@
     border-radius: 3px;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
+
+.card-img {
+    width: 100%;
+    height: 55px;
+    background-color: rgba(0,0,0,0.3);
+}
+
+
+
