administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -58,5 +58,14 @@
     background-color: rgba(0,0,0,0.3);
 }
 
+.story-card h3 {
+    margin: 2px;
+    text-align: left;
+}
+
+.story-card p {
+    text-align: left;
+    margin: 2px;
+}
 
 
