--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -56,6 +56,7 @@
     width: 100%;
     height: 55px;
     background-color: rgba(0,0,0,0.3);
+    border-radius: 3px 3px 0 0;
 }
 
 .story-card h3 {
