administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -37,6 +37,11 @@
 }
 
 
+.MapOverlayView.bottom-center.UIMapControl {
+    width: 100%;
+    background: white;
+}
+
 
 .bottom-by {
     float: right;
