--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -41,6 +41,9 @@
     width: 100%;
     background: white;
 }
+.ui-view.overlay-bar {
+    box-shadow: 0 0 3px rgba(0,0,0,0.3);
+}
 
 
 .bottom-by {
