--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -80,6 +80,7 @@
 
 .SideBarWidget {
     width: 0;
+    box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
 .SideBarWidget.right>.toggle-button, .SideBarWidget.right.active>.toggle-button {
     background-color: white;
