--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -88,7 +88,25 @@
     background-size: 60%;
 }
 
+.profile-section .array-module .primary-btn {
+    background-color: #549ae6;
+    border: none;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    margin: 5px;
+    padding: 10px 25px;
+    color: white;
+    font-weight: 100;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+    font-size: 22px;
+    margin-top: 25px;
+}
+.profile-section .array-module .login {}
+.profile-section .array-module .logout {}
+.profile-section .array-module .register {}
 
+.ui-view.profile-section {
+    float: right;
+}
  
 
 
