--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -100,6 +100,13 @@
     font-size: 22px;
     margin-top: 25px;
 }
+
+.profile-section .array-module .primary-btn:hover {
+    box-shadow: 0 0 5px rgba(0,0,0,0.4);
+    background-color: #4987cc;
+}
+
+
 .profile-section .array-module .login {}
 .profile-section .array-module .logout {}
 .profile-section .array-module .register {}
