--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -115,7 +115,21 @@
     float: right;
 }
  
+.profile-section span.user-icon {
+    width: 90px;
+    height: 90px;
+    display: inline-block;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 100px;
+    margin: 5px 10px;
+    border: 3px solid rgba(0,0,0,0.1);
+    box-sizing: border-box;
+}
 
+.profile-section .array-module>div {
+    display: inline-block;
+    vertical-align: top;
+}
 
 
 
