administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -88,7 +88,7 @@
     background-size: 60%;
 }
 
-primary-btn, .inline-btn {
+.primary-btn, .inline-btn {
     cursor: pointer;
 }
 .profile-section  .primary-btn {
