administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -50,9 +50,11 @@
 .bottom-by {
     float: right;
 }
-.story-list
+
+.story-list{
     vertical-align: top;
 }
+
 .ui-view.story-card {
     display: inline-block;
     height: 100px;
