--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -82,6 +82,17 @@
     margin: 2px;
 }
 
+.story-card .add-card {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    border: none;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 3px;
+}
+
 
 .SideBarWidget.UIMapControl {
     width: 0;
