--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -227,13 +227,20 @@ textarea[disabled] {
     float: right;
     height: 30px;
     margin-left: 5px;
-    background-color: cornflowerblue;
+    background-color: #549ae6;
     color: white;
     text-transform: capitalize;
     border: none;
     border-radius: 2px;
     padding: 0 15px;
     cursor: pointer;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+
+.form-navigation-btns .btn:hover{
+    box-shadow: 0 0 5px rgba(0,0,0,0.4);
+    background-color: #4987cc
 }
 
 
