--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -158,6 +158,7 @@
     margin: 5px 10px;
     border: 3px solid rgba(0,0,0,0.1);
     box-sizing: border-box;
+    background-size:cover;
 }
 
 .profile-section .array-module>div {
