administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -26,10 +26,10 @@
 }
 
 
-.birth-card:after{
+.birth-card .icon{
     background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('birthIcon')[0].'?thumb=>100x>100');?>);
 }
-.story-card:after{
+.story-card .icon{
     background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('storyIcon')[0].'?thumb=>100x>100');?>);
 }
 
