--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -32,6 +32,9 @@
 .journey-card .icon{
     background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('storyIcon')[0].'?thumb=>100x>100');?>);
 }
+.repatriation-card .icon{
+    background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('repatriationIcon')[0].'?thumb=>100x>100');?>);
+}
 
 .add-card>.icon {
     position: absolute;
