--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -27,16 +27,16 @@
 
 
 .birth-card .icon{
-    background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('birthIcon')[0].'?thumb=>100x>100');?>);
+    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('birthIcon')[0].'?thumb=>100x>100');?>");
 }
 .journey-card .icon{
-    background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('storyIcon')[0].'?thumb=>100x>100');?>);
+    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('storyIcon')[0].'?thumb=>100x>100');?>");
 }
 .repatriation-card .icon{
-    background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('repatriationIcon')[0].'?thumb=>100x>100');?>);
+    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('repatriationIcon')[0].'?thumb=>100x>100');?>");
 }
 .publishing-options-card .icon{
-    background-image: url(<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('publishingOptionsIcon')[0].'?thumb=>100x>100&tint=rgb(99, 157, 22)');?>);
+    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('publishingOptionsIcon')[0].'?thumb=>100x>100&tint=rgb(99, 157, 22)');?>"");
 }
 
 
