administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -303,5 +303,9 @@ textarea[disabled] {
     display: none;
 }
 
+.uploads-hidden .media-bar, .uploads-hidden .media-selection {
+    display: none;
+}
+
 
 
