--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -97,6 +97,7 @@
     height: 55px;
     background-color: rgba(0,0,0,0.3);
     border-radius: 3px 3px 0 0;
+    background-size: cover;
 }
 
 .story-card h3 {
