administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -370,7 +370,11 @@ span.image-file.media-item img {
     color: #5ea5e9;
 }
 
-
+span.user-link {
+    cursor: pointer;
+    color: #fb8a05;
+    font-size: 11px;
+}
 
 
 
