--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -433,6 +433,28 @@ span.user-link {
     display: inline;
 }
 
+input.search-input {
+    width: 380px;
+    height: 30px;
+    line-height: 30px;
+    text-indent: 14px;
+    border: none;
+    background-color: rgba(255,255,255,0.6);
+}
+
+span.search-bar-btn.left.search {
+    display: block;
+    width: 380px;
+    text-align: left;
+    margin-top: 30px;
+    text-indent: 14px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 20px;
+    font-weight: 100;
+    color: #67b7ee;
+}
+
 
 
 
