administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -439,7 +439,7 @@ input.search-input {
     line-height: 30px;
     text-indent: 14px;
     border: none;
-    background-color: rgba(255,255,255,0.6);
+    background-color: white;
 }
 
 span.search-bar-btn.left.search {
