administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -493,5 +493,13 @@ span.search-bar-btn.left.search {
     width: 60px;
 }
 
+.sidebar-view .uitext-container {
+    margin-bottom: 0;
+}
+
+
+
+
+
 
 
