--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -143,6 +143,18 @@ span.delete-btn, span.edit-btn {
     border-radius: 0;
     padding-right: 15px;
     margin-right: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 115px;
+}
+
+.summary-card h3, .summary-card h4 {
+    margin: 2px;
+    text-align: left;
+    font-weight:100;
+}
+.summary-card h3{
+    font-weight:400;
 }
 
 .card-img {
