--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -174,6 +174,8 @@ span.delete-btn, span.edit-btn {
     text-align: left;
     margin: 2px;
     position:relative;
+    height: 26px;
+    overflow: hidden;
 }
 
 .story-card p:after {
