--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -218,10 +218,15 @@ span.delete-btn, span.edit-btn {
     width: 0;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
 }
+
 .SideBarWidget.right>div.toggle-button, .SideBarWidget.right.active>div.toggle-button {
     background-color: white;
     background-image: url("<?php echo UrlFrom('{assets}/Control Panel Icons/search.png'); ?>");
     background-size: 60%;
+}
+
+.SideBarWidget.right.active>div.toggle-button {
+    background-color: #ffcc00;
 }
 
 .SideBarWidget.right>div.toggle-button:hover{
