--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -248,7 +248,7 @@ span.TileButtonsFunctionsSection {
 .primary-btn, .inline-btn {
     cursor: pointer;
 }
-.profile-section  .primary-btn, .sort-card button {
+.profile-section  .primary-btn, .sort-card button, .module-wizard .form-btn.register {
     background-color: #549ae6;
     border: none;
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
@@ -285,7 +285,7 @@ span.TileButtonsFunctionsSection {
     border-bottom: 1px solid #5ea5e9;
 }
 
-.profile-section .primary-btn:hover, .sort-card button:hover {
+.profile-section .primary-btn:hover, .sort-card button:hover{
     box-shadow: 0 0 5px rgba(0,0,0,0.4);
     background-color: #4987cc;
 }
