--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -285,7 +285,7 @@ span.TileButtonsFunctionsSection {
     border-bottom: 1px solid #5ea5e9;
 }
 
-.profile-section .primary-btn:hover, .sort-card button:hover{
+.profile-section .primary-btn:hover, .sort-card button:hover, .module-wizard .form-btn.register:hover{
     box-shadow: 0 0 5px rgba(0,0,0,0.4);
     background-color: #4987cc;
 }
