--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -262,6 +262,13 @@ span.TileButtonsFunctionsSection {
     border-radius:3px;
 }
 
+
+.module-wizard .form-btn.register {
+    margin-top: 5px;
+    float: right;
+    margin-bottom: 30px;
+}
+
 .sort-card button.current {
     background-color: #639d16;
 }
