--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -633,7 +633,9 @@ span.search-bar-btn.left.search:before {
 
 
 .module-wizard .upload-btns span.image {
-    background-image: url(https://trapline.geolive.ca/php-core-app/users_files/user_files_1/Uploads/oOY_AsU_ccD_[ImAgE]_[G].png);
+    background-image: url(https://trapline.geolive.ca/php-core-app/users_files/user_files_1/Uploads/oOY_AsU_ccD_[ImAgE]_[G].png?tint=rgb(255,0,0));
+    cursor: pointer;
+    text-indent: 5px;
 }
 
 
