administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -354,6 +354,11 @@ span.TileButtonsFunctionsSection {
     top: 55px;
     left: 20px;
 }
+.profile-section .inline-btn.publishing-options {
+    position: absolute;
+    top: 36px;
+    left: 20px;
+}
 
 
 
