administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -752,6 +752,9 @@ div.empty-section {
     cursor:pointer
 }
 
+.help-section.empty-section:hover {
+    background-color: rgba(0,0,0,0.05);
+}
 
 
 
