administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -756,7 +756,10 @@ div.empty-section {
     background-color: rgba(0,0,0,0.05);
 }
 
-
+.sidebar-view.item-content {
+    padding: 30px;
+    box-sizing: border-box;
+}
 
 
 
