administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -762,10 +762,12 @@ div.empty-section {
 }
 
 
-.title-field {
+.content..title-field {
     font-size: 1.2em;
     font-weight: 500;
 }
 
-
+.content.description-field {
+    margin: 5px 0;
+}
 
