--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -762,6 +762,15 @@ div.empty-section {
 }
 
 
+.item-content .ui-list-view>.ui-view {
+    box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    padding: 20px;
+    background: white;
+    border-radius: 2px;
+    margin-bottom: 5px;
+}
+
+
 .content.title-field {
     font-size: 1.2em;
     font-weight: 500;
