--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -136,6 +136,15 @@ span.delete-btn, span.edit-btn {
     top: -10px;
     left: -10px;
 }
+.ui-view .icon {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-size: 100%;
+    top: -10px;
+    left: -10px;
+}
 
 
 
