--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -157,9 +157,13 @@ span.delete-btn, span.edit-btn {
     height: 30px;
     margin-left: 10px;
     border: none;
-    background-color: #549ae6;
+    background-color: rgba(84, 154, 230, 0.1);
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
     border-radius: 2px;
+}
+.story-navigation button.active {
+    background-color: rgb(84, 154, 230);
+    cursor:pointer;
 }
 
 
