administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -41,10 +41,10 @@
 
 
 
-.button.back{
+button.back{
     background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('leftIcon')[0].'?thumb=>48x>48');?>");
 }
-.button.forward{
+button.forward{
     background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('rightIcon')[0].'?thumb=>48x>48');?>");
 }
 
