administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/mainStyle.customCSS.css
+++ b/app/mainStyle.customCSS.css
@@ -42,10 +42,12 @@
 
 
 button.back{
-    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('leftIcon')[0].'?thumb=>48x>48');?>");
+    background-image: url("<?php 
+    echo UrlFrom(GetWidget('siteConfig')->getParameter('leftIcon')[0].'?thumb=>48x>48&tint=rgb(255, 255, 255)');?>");
 }
 button.forward{
-    background-image: url("<?php echo UrlFrom(GetWidget('siteConfig')->getParameter('rightIcon')[0].'?thumb=>48x>48');?>");
+    background-image: url("<?php 
+    echo UrlFrom(GetWidget('siteConfig')->getParameter('rightIcon')[0].'?thumb=>48x>48&tint=rgb(255, 255, 255)');?>");
 }
 
 
